Closed Bug 149635 Opened 22 years ago Closed 22 years ago

Show values of HTML Title attributes as Tooltips during hover

Categories

(Camino Graveyard :: Page Layout, defect)

PowerPC
macOS
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
Chimera0.5

People

(Reporter: chrispetersen, Assigned: mikepinkerton)

References

()

Details

(Keywords: access, embed, helpwanted)

Attachments

(2 files)

Build: 0.1.3
Platform: Mac OS X 10.1.3
Expected Result: A tooltip should appear when mouse hovers over area assigned a
title attribute.

What I got: Tooltip doesn't display

Steps to reproduce:

1) Go to url

2) Move mouse over any of the characters or text captions.

3) Tooltip doesn't display
Reduced test case of problem:

http://mozilla.org/quality/browser/standards/xhtml/transitional/a_title.xml

Result: Tooltip doesn't appear when hovering over anchor.
Last Chimera build tested was 2002-06-04-05 trunk.
i've been working on this, but have run into some problems.

taking
Assignee: saari → pinkerton
Keywords: embed
Target Milestone: --- → Chimera0.4
Keywords: access
Summary: HTML Title attribute is not supported → Show values of HTML Title attributes as Tooltips during hover
this would be nice to have fixed if possible (top compliance bug). What are the
issues pink?
since bugzilla uses titles on links heavly, I really would like this to get
fixed- making it easer to track other chimera bugs with bugzilla...
Please, no evangelism comments. If you want this, vote for it. Thanks.
*** Bug 155881 has been marked as a duplicate of this bug. ***
Copying dependency from bug 158089 (Which is a dupe of the dupe)
Blocks: 154286
this bug is sapping my will to live. Here's the story so far:

First i tried using cocoa tooltips. The problem here is that cocoa won't let you
just create a tooltip at a given location. It wants to know hotspot areas and do
the mouse tracking itself. Ok, that's fine, i made the entire content area a
hotspot, figuring i'd just set the tooltip text to something valid when gecko
said we were over a valid area. However, cocoa makes you leave and re-enter a
hotspot before it will show the tooltip. Even removing and recreating the
hotrect doesn't get around that, i think cocoa triggers on entering the hotrect,
and if the mouse is already inside it while it's created, it doesn't count that
as 'entering'. Nor does it count bringing the app to the front with a click. The
mouse must move into the hotrect while the window is in the fg. It appears we'll
have to know every possible hotspot and gecko isn't up to that task.

Next I tried using the carbon help manager. I got the tip showing, it's in the
right position, the problem there is that the tip ends up blocking us from
getting any mouse moved events while it's up. As a result, gecko can't track the
mouse to hide it. While it eventually times out, it's rather annoying.

HELP! :(
Status: NEW → ASSIGNED
Target Milestone: Chimera0.4 → Chimera0.5
Keywords: helpwanted
I've been poking around Apple's private classes, and I really don't see
anything here that would allow us to throw up a tooltip at will at a particular
location.  It appears that it was designed only around hotrects, at the mouse
location, etc.

Our needs are fairly simple (just show a tooltip at any given point when asked,
and remove it when asked), so I think the best course of action is to write our
own CHToolTip class.  I may take a shot at that later today.
I've made a lot of progress writing a custom tooltips class.  Right now, the
tooltip shows up, looks right, sizes itself appropriately, and in general,
works.  There are a few last issues I need to deal with before sending in a
patch.  It should be ready fairly soon.
I wrote my own tooltips class for this isntead of using Apple's.  It seems to
work reasonably well.  Can someone come up with some other pages that use them,
so I can test the patch more extensivly?
http://www.freeke.org/ffg/archives/2002_08_04_ffg-hist.html uses both acronym
tags and the HTML title attribute.
Nifty, it's working.  Anyone see any problems?
thanks a million for the patch richard. i had to clean up a few things:

- add the correct license
- change the filenames to protect the innocent
- fix the positioning code for multiple monitors

fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verified using my build from 8-10-2002
Status: RESOLVED → VERIFIED
No longer blocks: 154286
Blocks: 162205
I'm noticing a minor cosmetic issue in build 2002081205 -- there seems to be an
extra space character (or maybe just extra whitespace) appended to the end of
the string in the tooltip.  Should I file this as a new bug?
Dave, see bug 162205.
*** Bug 162915 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: