Adding tooltip support for TITLE in html (bug 149635)