chimera/CHBrowserWrapper.h
@@ -39,6 +39,7 @@
 #import "CHBrowserView.h"
 
 @class BrowserWindowController;
+@class CHToolTip;
 
 @interface CHBrowserWrapper : NSView <NSBrowserListener, NSBrowserContainer>
 {
@@ -61,6 +62,7 @@
   CHBrowserView* mBrowserView;
   NSString* defaultStatus;
   NSString* loadingStatus;
+  CHToolTip* toolTip;
 
   BOOL mIsPrimary;
   BOOL mIsBusy;
